feat: mappers estáticos